--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
     <div class="index" id="a1" align="center"> <span>
       <h3 align="center"> WORKS </h3>
       <ul class="aaa" style="margin-bottom:280px;">
-      <li><img src="images/20.jpg" / width="100%"></li>
-      <li><img src="images/21.jpg" / width="100%"></li>
-      <li><img src="images/22.jpg" / width="100%"></li>
+      <li><img src="images/20.JPG" / width="100%"></li>
+      <li><img src="images/21.JPG" / width="100%"></li>
+      <li><img src="images/22.JPG" / width="100%"></li>
       </ul>
       <p style="text-align:center; width:400px;  padding:20px; border-radius:30px 30px 30px 30px;background:#add8eb; color:#fff;">
         中華風、キーホルダー<br /> 
@@ -160,9 +160,9 @@
     <div class="index" id="a1" align="center"> <span>
       <h3 align="center"> WORKS </h3>
       <ul class="aaa" style="margin-bottom:280px;">
-      <li><img src="images/23.jpg" / width="100%"></li>
-      <li><img src="images/24.jpg" / width="100%"></li>
-      <li><img src="images/25.jpg" / width="100%"></li>
+      <li><img src="images/23.JPG" / width="100%"></li>
+      <li><img src="images/24.JPG" / width="100%"></li>
+      <li><img src="images/25.JPG" / width="100%"></li>
       </ul>
       <p style="text-align:center; width:400px;  padding:20px; border-radius:30px 30px 30px 30px;background:#add8eb; color:#fff;">
         
@@ -174,9 +174,9 @@
     <div class="index" id="a1" align="center"> <span>
       <h3 align="center">WORKS </h3>
       <ul class="aaa" style="margin-bottom:280px;">
-      <li><img src="images/36.jpg" / width="100%"></li>
-      <li><img src="images/35.jpg" / width="100%"></li>
-      <li><img src="images/45.jpg" / width="100%"></li>
+      <li><img src="images/36.JPG" / width="100%"></li>
+      <li><img src="images/35.JPG" / width="100%"></li>
+      <li><img src="images/45.JPG" / width="100%"></li>
       </ul>
       <p style="text-align:center; width:400px;  padding:20px; border-radius:30px 30px 30px 30px;background:#add8eb; color:#fff;">
         ネックレス<br />
@@ -188,8 +188,8 @@
     <div class="index" id="a1" align="center"> <span>
       <h3 align="center"> WORKS </h3>
       <ul class="aaa" style="margin-bottom:280px;">
-      <li><img src="images/38.jpg" / width="100%"></li>
-      <li><img src="images/37.jpg" / width="100%"></li>
+      <li><img src="images/38.JPG" / width="100%"></li>
+      <li><img src="images/37.JPG" / width="100%"></li>
       <li><img src="images/39.JPG" / width="100%"></li>
       </ul>
       <p style="text-align:center; width:400px;  padding:20px; border-radius:30px 30px 30px 30px;background:#add8eb; color:#fff;">
