--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     </div>
     <div id="banner" class="banner wrapin">
     <ul id="b_pic">
-      <li style="display: block;"><img src="images/5.jpg"></li>
-      <li><img src="images/6.jpg"></li>
-      <li><img src="images/7.jpg"></li>
+      <li style="display: block;"><img src="images/5.JPG"></li>
+      <li><img src="images/6.JPG"></li>
+      <li><img src="images/7.JPG"></li>
     </ul>
     <ul id="b_an">
       <li></li>
@@ -118,9 +118,9 @@
     <div class="index" id="a1" align="center"> <span>
       <h3 align="center"> WORKS </h3>
       <ul class="aaa" style="margin-bottom:280px;">
-      <li><img src="images/15.jpg" / width="100%"></li>
-      <li><img src="images/14.jpg" / width="100%"></li>
-      <li><img src="images/13.jpg" / width="100%"></li>
+      <li><img src="images/15.JPG" / width="100%"></li>
+      <li><img src="images/14.JPG" / width="100%"></li>
+      <li><img src="images/13.JPG" / width="100%"></li>
       </ul>
       <p style="text-align:center; width:400px;  padding:20px; border-radius:30px 30px 30px 30px;background:#add8eb; color:#fff;">
         
