--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
   <div class="index" id="a1" align="center"> <span>
       <h3 align="center"> WORKS </h3>
       <ul class="aaa" style="margin-bottom:280px;">
-      <li><img src="images/10.jpg" / width="100%"></li>
-      <li><img src="images/11.jpg" / width="100%"></li>
-      <li><img src="images/12.jpg" / width="100%"></li>
+      <li><img src="images/10.JPG" / width="100%"></li>
+      <li><img src="images/11.JPG" / width="100%"></li>
+      <li><img src="images/12.JPG" / width="100%"></li>
       </ul>
       <p style="text-align:center; width:400px;  padding:20px; border-radius:30px 30px 30px 30px;background:#add8eb; color:#fff;">
         
